Fixes responsive alignment issues #46

--- a/themes/crl/less/breadcrumbs.less
+++ b/themes/crl/less/breadcrumbs.less
@@ -1,7 +1,9 @@
 .breadcrumbs {
 
   .container {
-    padding-left: 0;
+    @media @tablet {      
+      padding-left: 0;
+    }
 
     .breadcrumb {
       margin: 2rem 0 1rem;
