--- a/themes/crl/less/crl_global.less
+++ b/themes/crl/less/crl_global.less
@@ -74,8 +74,10 @@ span.field-colon {
 }
 
 .container {
-  padding-right: 0;
-  padding-left: 0;
+  @media @tablet {
+    padding-right: 0;
+    padding-left: 0;
+  }
 }
 
 // Bootstrap 3 Borderless Table.
