--- a/themes/crl/less/header.less
+++ b/themes/crl/less/header.less
@@ -40,3 +40,9 @@
     }
   }
 }
+
+// Undo bootstrap negative margins.
+.container>.navbar-header {
+  margin-right: initial;
+  margin-left: initial;
+}
